tests/specs/ecosystem/md/assert_console/0_0_1.test
md/assert-console/0.0.1
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@std/assert@^0.220.1": "jsr:@std/assert@0.220.1",
      "jsr:@std/fmt@^0.220.1": "jsr:@std/fmt@0.220.1"
    },
    "jsr": {
      "@std/assert@0.220.1": {
        "integrity": "88710d54f3afdd7a5761e7805abba1f56cd14e4b212feffeb3e73a9f77482425",
        "dependencies": [
          "jsr:@std/fmt@^0.220.1"
        ]
      },
      "@std/fmt@0.220.1": {
        "integrity": "3b1a698477a26b1dacbbee26db1a65030a005c6d71db3b3a0e59f8a638f04d7a"
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /main.ts:17:7
   | 
17 | const forEachChannel = (forEach: (callbackFn: keyof LogHistory) => void) => {
   |       ^^^^^^^^^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type of 'void' or 'never' to the function

  info: all functions in the public API must have an explicit return type
  info: function expressions without a return statement can have a return type of either 'void' or 'never'
  info: this function has no return statements, so a return type could not be inferred automatically
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /main.ts:49:14
   | 
49 | export const assertConsole = (expected: Partial<LogHistory>) => {
   |              ^^^^^^^^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type of 'void' or 'never' to the function

  info: all functions in the public API must have an explicit return type
  info: function expressions without a return statement can have a return type of either 'void' or 'never'
  info: this function has no return statements, so a return type could not be inferred automatically
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


